CHATS_SIT/force-app/main/default/objects/sfsit_t_indiv_cat_rq_hist__x.object
<CustomObject>
    <description>sfsit$t_indiv_cat_rq_hist</description>
    <externalDataSource>Heroku_Connect_datasource</externalDataSource>
    <externalName>sfsit$t_indiv_cat_rq_hist</externalName>
    <fields>
        <fullName>cde_cat_prog__c</fullName>
        <description>cde_cat_prog</description>
        <externalDeveloperName>cde_cat_prog</externalDeveloperName>
        <label>Program Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cde_change_rq_cat__c</fullName>
        <description>cde_change_rq_cat</description>
        <externalDeveloperName>cde_change_rq_cat</externalDeveloperName>
        <label>Reason for Ending Care</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dte_begin_effv__c</fullName>
        <description>dte_begin_effv</description>
        <externalDeveloperName>dte_begin_effv</externalDeveloperName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_change_last__c</fullName>
        <description>dte_change_last</description>
        <externalDeveloperName>dte_change_last</externalDeveloperName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dte_end_effv__c</fullName>
        <description>dte_end_effv</description>
        <externalDeveloperName>dte_end_effv</externalDeveloperName>
        <label>Effecive End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <description>idn_case</description>
        <externalDeveloperName>idn_case</externalDeveloperName>
        <label>Case Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_client__c</fullName>
        <description>idn_client</description>
        <externalDeveloperName>idn_client</externalDeveloperName>
        <label>Client ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_indiv_cat_rq__c</fullName>
        <description>idn_indiv_cat_rq</description>
        <externalDeveloperName>idn_indiv_cat_rq</externalDeveloperName>
        <label>Individual category request ID</label>
        <length>50</length>
        <referenceTargetField>T_INDIV_CAT_RQ__c.IDN_EXTNL__c</referenceTargetField>
        <referenceTo>T_INDIV_CAT_RQ__c</referenceTo>
        <relationshipLabel>Child Care Request Legacy History</relationshipLabel>
        <relationshipName>sfsit_t_indiv_cat_rq_hist</relationshipName>
        <type>IndirectLookup</type>
    </fields>
    <fields>
        <fullName>idn_indiv_cat_rq_hist__c</fullName>
        <description>idn_indiv_cat_rq_hist</description>
        <externalDeveloperName>idn_indiv_cat_rq_hist</externalDeveloperName>
        <label>Individual category ID History</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>idn_user_change_last__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>idn_user_change_last</description>
        <externalDeveloperName>idn_user_change_last</externalDeveloperName>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>sfsit_t_indiv_cat_rq_hist</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ind_record_curr__c</fullName>
        <description>ind_record_curr</description>
        <externalDeveloperName>ind_record_curr</externalDeveloperName>
        <label>Current Record Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ind_record_delete_logcl__c</fullName>
        <description>ind_record_delete_logcl</description>
        <externalDeveloperName>ind_record_delete_logcl</externalDeveloperName>
        <label>Logical Deleted Record</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nbr_seq_hist__c</fullName>
        <description>nbr_seq_hist</description>
        <externalDeveloperName>nbr_seq_hist</externalDeveloperName>
        <label>Number Sequence history</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_indiv_case__c</fullName>
        <description>nbr_seq_indiv_case</description>
        <externalDeveloperName>nbr_seq_indiv_case</externalDeveloperName>
        <label>Individual Case Number Sequence</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nbr_seq_rq_cat_indiv__c</fullName>
        <description>nbr_seq_rq_cat_indiv</description>
        <externalDeveloperName>nbr_seq_rq_cat_indiv</externalDeveloperName>
        <label>Individual category request number seq</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Child Care Request History</label>
    <pluralLabel>Child Care Request History</pluralLabel>
</CustomObject>